Update UI for 3 pages - MinhTHD

--- a/web-ui/index-ctsa.html
+++ b/web-ui/index-ctsa.html
@@ -137,7 +137,7 @@
                                   style="font-size: 20px;color:rgb(243, 243, 243);">
                                 2
                             </span>
-                        </span>- Điểm trung bình tất cả các môn trong năm học hiện tại?</span><br>
+                        </span>- Điểm trung bình tất cả các môn trong năm học lớp 12?</span><br>
                     <div class="hideaway role2 mx-4 pl-4 my-2"
                          style="border-left-style: dashed; border-width:3px">
 
