--- a/web-ui/summary.html
+++ b/web-ui/summary.html
@@ -279,9 +279,7 @@
 
             <div class="col-md-4 text-center banner"
                  style="height:700px; width:280px;">
-              <span style="font-size: 70px; color:#ff6414">
-                1
-              </span><br><br>
+              <span style="font-size: 70px; color:#ff6414">1</span><br><br>
               <b style="color:rgb(241, 236, 236); font-size:5em">Grab</b><br><br>
               <div class="card">
                 <ul class="list-group list-group-flush">
@@ -300,9 +298,7 @@
 
             <div class="col-md-3 text-center banner">
 
-              <span style="font-size: 55px; color:#ff6414">
-                3
-              </span><br><br><br>
+              <span style="font-size: 55px; color:#ff6414">3</span><br><br>
               <b style="color:rgb(241, 236, 236); font-size:3em">RXR</b><br><br>
               <div class="card">
                 <ul class="list-group list-group-flush">
