--- a/web-ui/result.html
+++ b/web-ui/result.html
@@ -31,6 +31,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.min.js"></script>
     <script src="js/get-suggestions.js"></script>
+    <script src="js/entrance-exam.js"></script>
     <!-- <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">  -->
 </head>
 
@@ -157,217 +158,9 @@
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="row modal-body justify-content-between">
-                    <div class="col-md-6 pl-4"
-                         style="border-right: 1px solid grey">
-                        <div id="mathMark"
-                             class="collegeScoreInput">
-                            <span>Toán học:</span>
-                            <input class="rangeValues">
-                            <!-- <label class="float-right">
-                                <input type="checkbox"
-                                       value=""
-                                       onchange="disableScoreInput(this)"> Không thi
-                            </label> -->
-                            <section style="
-                                       padding-bottom:20px"
-                                     class="range-slider">
-                                <input value="5"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                                <input value="10"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                            </section>
-                        </div>
-
-                        <div id="literatureMark"
-                             class="collegeScoreInput">
-                            <span>
-                                Ngữ Văn:
-                            </span>
-                            <input class="rangeValues">
-                            <!-- <label  class="float-right">
-                                <input type="checkbox"
-                                       value=""
-                                       onchange="disableScoreInput(this)"> Không thi
-                            </label> -->
-                            <section style="padding-bottom:20px"
-                                     class="range-slider">
-                                <input value="5"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                                <input value="10"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                            </section>
-                        </div>
-
-                        <div id="englishMark"
-                             class="collegeScoreInput">
-                            <span>
-                                Anh Văn:
-                            </span>
-                            <input class="rangeValues">
-                            <!-- <label  class="float-right">
-                                <input type="checkbox"
-                                       value=""
-                                       onchange="disableScoreInput(this)"> Không thi
-                            </label> -->
-                            <section style="padding-bottom:20px"
-                                     class="range-slider">
-                                <input value="5"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                                <input value="10"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                            </section>
-                        </div>
-
-                        <div id="physicsMark"
-                             style="padding:3%">
-                            <span>
-                                Vật lý:
-                            </span>
-                            <input class="rangeValues">
-                            <label class="float-right">
-                                <input type="checkbox"
-                                       value=""
-                                       onchange="disableScoreInput(this)"> Không thi
-                            </label>
-                            <section style="padding-bottom:20px"
-                                     class="range-slider">
-                                <input value="5"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                                <input value="10"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                            </section>
-                        </div>
-                    </div>
-
-                    <div class="col-md-6 pl-4">
-                        <div id="chemistryMark"
-                             class="collegeScoreInput">
-                            <span>Hóa học:</span>
-                            <input class="rangeValues">
-                            <label class="float-right">
-                                <input type="checkbox"
-                                       value=""
-                                       onchange="disableScoreInput(this)"> Không thi
-                            </label>
-                            <section style="padding-bottom:20px"
-                                     class="range-slider">
-                                <input value="5"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                                <input value="10"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                            </section>
-                        </div>
-
-                        <div id="biologyMark"
-                             class="collegeScoreInput">
-                            <span>
-                                Sinh học:
-                            </span>
-                            <input class="rangeValues">
-                            <label class="float-right">
-                                <input type="checkbox"
-                                       value=""
-                                       onchange="disableScoreInput(this)"> Không thi
-                            </label>
-                            <section style="padding-bottom:20px"
-                                     class="range-slider">
-                                <input value="5"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                                <input value="10"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                            </section>
-                        </div>
-
-                        <div id="historyMark"
-                             class="collegeScoreInput">
-                            <span>
-                                Lịch sử:
-                            </span>
-                            <input class="rangeValues">
-                            <label class="float-right">
-                                <input type="checkbox"
-                                       value=""
-                                       onchange="disableScoreInput(this)"> Không thi
-                            </label>
-                            <section style="padding-bottom:20px"
-                                     class="range-slider">
-                                <input value="5"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                                <input value="10"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                            </section>
-                        </div>
-
-                        <div id="geographyMark"
-                             style="padding:3%">
-                            <span>
-                                Địa lý:
-                            </span>
-                            <input class="rangeValues"
-                                   id="testMathMark">
-                            <label class="float-right">
-                                <input type="checkbox"
-                                       value=""
-                                       onchange="disableScoreInput(this)"> Không thi
-                            </label>
-                            <section style="padding-bottom:20px"
-                                     class="range-slider">
-                                <input value="5"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                                <input value="10"
-                                       min="0"
-                                       max="10"
-                                       step="0.1"
-                                       type="range">
-                            </section>
-                        </div>
-                    </div>
+                <div id="entranceExamInput"
+                     class="row modal-body justify-content-between">
+                    
                 </div>
                 <div class="modal-footer">
                     <button type="button"
@@ -535,21 +328,9 @@
         }
 
         window.onload = function () {
-            // Initialize Sliders
-            var sliderSections = document.getElementsByClassName("range-slider");
-            for (var x = 0; x < sliderSections.length; x++) {
-                var sliders = sliderSections[x].getElementsByTagName("input");
-                for (var y = 0; y < sliders.length; y++) {
-                    if (sliders[y].type === "range") {
-                        sliders[y].oninput = getVals;
-                        // Manually trigger event first time to display values
-                        sliders[y].oninput();
-                    }
-                }
-            }
+            retrieveSubjects('entranceExamInput')
 
             var suggestions = JSON.parse(sessionStorage.getItem('suggestions'));
-
             showSuggestions(suggestions)
         }
 
@@ -581,8 +362,6 @@
                 $('<img>', {
                     src: suggestion.major.imageUrl,
                     alt: suggestion.major.vietnamese,
-                    // height: '180',
-                    // width: '180'
                 }).appendTo(suggestionDiv)
             }
         }
@@ -640,28 +419,21 @@
         const numberWithCommas = (x) => {
             return x.toString().replace(/\B(?=(\d{3})+(?!\d))/g, ",");
         }
+
         function disableScoreInput(obj) {
             var parent = obj.parentNode.parentNode;
             var section = parent.getElementsByTagName("section");
             if ($(obj).is(":checked")) {
-
-
                 //disable range input
                 $(section).children().prop('disabled', true);
                 //disable text input
                 $(parent).children().prop('disabled', true);
                 $(parent).addClass("greyout");
-
-
-
-
             } else {
                 $(parent).removeClass("greyout");
-
                 $(parent).children().prop('disabled', false);
                 $(parent).children().children().prop('disabled', false);
             }
-
         }
     </script>
 </body>
